--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     
     "icons": { "128": "dmg_report-128.png" },
     
-    "permissions": [ "activeTab", "storage" ],
+    "permissions": [ "tabs", "activeTab", "storage" ],
 
     "browser_action": {
 		"default_icon": "dmg_report-512.png",
